manifest/dev/website/deploy-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: dev
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: website
          image: ghcr.io/flotio-dev/website-next:4.1
          resources:
            limits:
              memory: "256Mi"
              cpu: "1000m"
            requests:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
