manifest/dev/website/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
  namespace: dev
spec:
  selector:
    app: website
  ports:
  - port: 443
    targetPort: 3000
